Fixed styling issues where some edge cases may break the display

--- a/client/styles/invite-page.module.css
+++ b/client/styles/invite-page.module.css
@@ -56,7 +56,7 @@
 }
 
 .location {
-  padding-left: 30px;
+  margin-left: 10px;
 }
 
 .location:hover {
@@ -76,9 +76,13 @@
 
 .description {
   padding-bottom: 30px;
+  min-height: 150px;
+  min-width: 430px;
+  max-width: 720px;
 }
 
 .rsvp_btn {
+  margin-top: 30px;
   width: 100%;
   padding: 10px;
   background-color: rgb(233, 250, 233);
@@ -102,6 +106,7 @@
 }
 
 .input {
+  width: 100%;
   background-color: rgb(233, 250, 233);
   padding: 5px;
   border: 0px;
